Fix home page code block sizing on iPhone

--- a/website/static/css/home.css
+++ b/website/static/css/home.css
@@ -182,6 +182,15 @@
 }
 
 /*
+ * Code blocks
+ */
+@media only screen and (max-width: 735px) {
+    .home .term-content {
+        font-size: 2.7vw;
+    }
+}
+
+/*
  * Logo Showcase
  */
 .logo-showcase-wrapper {
